@@ -120,6 +120,8 @@ METER_OBJS:=\
 	$(BUILD)/meter_ehzp.o \
 	$(BUILD)/meter_esyswm.o \
 	$(BUILD)/meter_em24.o \
+	$(BUILD)/meter_emerlin868.o \
+	$(BUILD)/meter_ev200.o \
 	$(BUILD)/meter_eurisii.o \
 	$(BUILD)/meter_fhkvdataiii.o \
 	$(BUILD)/meter_flowiq2200.o \
