@@ -267,6 +267,8 @@ Aquametro/Integra Topas Es Kr (topaseskr)
 Bmeters Hydrodigit (hydrodigit) (partly non-standard protocol)
 Diehl/Sappel IZAR RC 868 I R4 PL (izar) (non-standard protocol)
 Diehl HYDRUS (hydrus)
+Elster Merlin 868 (emerlin868)
+Elster V200H (ev200)
 Honeywell Q400 (q400)
 Kamstrup Multical 21 (multical21)
 Kamstrup flowIQ 2200 (flowiq2200)
